2011-06-13 Borut Razem <borut.razem AT gmail.com>

	* local/dev.mk, local/solaris-x86.mk: use GCC compiler

2011-04-23 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk: fixed UNIX2DOS for Solaris

2011-03-07 Borut Razem <borut.razem AT gmail.com>

	* local/dev.mk, local/mypants.mk, local/solaris-x86.mk,
	  local/freebsd-i386.mk, local/netbsd-i386.mk:
	  added -I$(HOME)/local-$(HOSTNAME)/include to TARGETCXXFLAGS

2010-10-12 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: execute copy-extra-bins before generate-tarball

2010-10-06 Borut Razem <borut.razem AT siol.net>

	* local/cf-x86-i586-mingw32msvc.mk:
	  define non_free_include_dir_suffix and non_free_lib_dir_suffix

2010-09-18 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk: remove gen and results directories before
	  performing regression tests on cross compiled win32 platform

2010-07-06 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk, lib/bootstrap.mk, lib/variables.mk,
	  local/cf-x86-i586-mingw32msvc.mk, Makefile:
	  exclude host target from cross regression testing, run regression
	  tests after packaging

2010-07-04 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk:
	  give 10s to (un)installation to complete

2010-07-03 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk, lib/doc-archive.mk, lib/variables.mk:
	  added UNIX2DOS dos utils alias, ndeeded on Ubuntu

2010-06-27 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk:
	  created rule sdcc-regression-win32

2010-06-26 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk:
	  WIN32 regression tests with wine on mingw cross-compiled sdcc

2010-04-13 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh:
	  don't repeat the checkout if completed succesfully

2010-04-12 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh:
	  try 3 times to checkout, before give up

2010-04-06 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh: